update status data master ke boolean
