# internal/types/request/warehouse_request.go
@@ -10,11 +10,11 @@ type CreateWarehouseRequest struct {
 }
 
 type UpdateWarehouseRequest struct {
-	Code    *string `json:"code" validate:"omitempty"`
-	Name    *string `json:"name" validate:"omitempty"`
-	Type    *string `json:"type" validate:"omitempty,oneof=MAIN BRANCH STORAGE OUTLET"`
-	Address *string `json:"address" validate:"omitempty"`
-	City    *string `json:"city" validate:"omitempty"`
-	Phone   *string `json:"phone" validate:"omitempty"`
-	Status  *string `json:"status" validate:"omitempty,oneof=active inactive maintenance"`
+	Code     *string `json:"code" validate:"omitempty"`
+	Name     *string `json:"name" validate:"omitempty"`
+	Type     *string `json:"type" validate:"omitempty,oneof=MAIN BRANCH STORAGE OUTLET"`
+	Address  *string `json:"address" validate:"omitempty"`
+	City     *string `json:"city" validate:"omitempty"`
+	Phone    *string `json:"phone" validate:"omitempty"`
+	IsActive *bool   `json:"is_active" validate:"omitempty"`
 }
